--- a/style-flex.css
+++ b/style-flex.css
@@ -3,7 +3,7 @@ div{
 	height: 50px;
 	background-color: green;
 	border: 2px solid black;
-	border-radius: 50%;
+	/* border-radius: 50%; */
 }
 .grid {
 	display: grid;
@@ -26,7 +26,7 @@ div{
 		grid-template-rows: repeat(2, 1fr 1fr );
 	}
 	div {
-		background-color: red;
+		background-color: magenta;
 	}
 }
 @media screen and (min-width: 1001px){
@@ -36,7 +36,7 @@ div{
 		grid-template-rows: 1fr;
 	}
 	div {
-		background-color: yellow;
+		background-color: blue;
 	}
 }
 /*Шестое задание*/
